[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ril = { version = "0.5.0", features = ["all"] }
axum = { version = "0.5", features = ["multipart"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
simple_logger = "4"
tower-http = { version = "0.3", features = ["add-extension", "trace", "cors"] }
base64 = "0.13"